<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/diveagar"
        android:layout_margin="@dimen/margin_left"
        android:textStyle="bold"
        android:textColor="@color/textcolor"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:scaleType="centerCrop"
        android:id="@+id/attractionImageView"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_left"
        android:layout_marginBottom="@dimen/margin_left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/diveagarInfo"
        android:id="@+id/infotextView"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_below="@+id/attractionImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:background="@color/textcolor"
        android:layout_marginBottom="@dimen/margin_left"
        android:id="@+id/btnMap"
        android:layout_below="@+id/infotextView"
        android:layout_alignRight="@+id/infotextView"
        android:layout_alignEnd="@+id/infotextView"
        android:layout_gravity="right" />

</LinearLayout>