<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FCE4EC"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.punetourguide.MainActivity">

    <TextView
        android:id="@+id/info_treak"
        android:text="@string/treak"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/treak"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/info_smallTrip"
        android:text="@string/smallTrip"
        android:layout_below="@+id/info_treak"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_height="150dp"
        android:background="@drawable/small_trip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/info_beaches"
            android:text="@string/beaches"
            android:textColor="#E91E63"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_below="@+id/info_smallTrip"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="150dp"
            android:background="@drawable/beaches"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="45" />

</RelativeLayout>
</ScrollView>